<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setting_loginMore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/setting_login"
            android:textColor="#4362de"
            android:textSize="@dimen/setting_loginMore" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/user_login"
                android:gravity="center"
                android:text="@string/setting_login"
                android:textSize="@dimen/setting_login" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/login_wexin"
                android:gravity="center"
                android:text="@string/setting_login_weixin"
                android:textSize="@dimen/setting_login" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/login_weibo"
                android:gravity="center"
                android:text="@string/setting_login_weibo"
                android:textSize="@dimen/setting_login" />
        </LinearLayout>

        <View style="@style/settingfragment_View" />

        <TextView
            android:drawableLeft="@mipmap/money"
            android:text="@string/setting_marketChange"
            style="@style/settingfragment_tv" />

        <TextView
            style="@style/settingfragment_tv"
            android:drawableLeft="@mipmap/change"
            android:text="@string/setting_mySavePager" />

        <TextView
            style="@style/settingfragment_tv"
            android:drawableLeft="@mipmap/time"
            android:text="@string/setting_myLove" />

        <TextView
            style="@style/settingfragment_tv"
            android:drawableLeft="@mipmap/time"
            android:text="@string/setting_seeHistory" />

        <TextView
            style="@style/settingfragment_tv"
            android:drawableLeft="@mipmap/set"
            android:text="@string/setting_draft" />

        <View
           style="@style/settingfragment_View" />

        <TextView
            style="@style/settingfragment_tv"
            android:drawableLeft="@mipmap/set"
            android:text="@string/setting_set" />

    </LinearLayout>

</LinearLayout>